[ACC-2678] Add ResponseResolver to add additional responses to operations
